k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: careconnect-web
  namespace: careconnect
spec:
  type: ClusterIP
  selector:
    app: careconnect-web
  ports:
    - name: http
      port: 80
      targetPort: 3000
